# training-parser-antlr4

./: .env.sh  .gitignore  .pre-commit-config.yaml  AGENTS.md  LIBRARY_GUIDE.md  MANIFEST.in  MISSING_FIELDS.md  Makefile  README-ACT.md  README.md  SYNTAX.md  cli.py  compact_from_json.py  data.txt.sample  data_access.py  json_validator.py  main.py  main_export.py  mypy.ini  output.json  parse_to_json.py  programmer.py  pyproject.toml  requirements.txt  schema_validator.py  setup-uv.sh  simple_parser.py  splitter.py  test_json_validator.py  test_schema_validator.py  training-sample.txt  training-sample_initial.txt  training.g4  training_mine.g4  validate_bench_centric.py  validate_set_centric.py
.github/workflows/: ci.yml
data/: bench-centric-example.json  set-centric-example.json
makefiles/: bash-colors.mk  python_version.mk  virtualenvironment.mk
parser/: __init__.py  display.py  model.py  parser.py  serializer.py  standardize_name.py  test_model.py  test_parser.py  test_serializer.py  test_standardize_name.py
schema/: bench-centric.schema.json  common-definitions.schema.json  set-centric.schema.json
scripts/: __init__.py  download_antlr.py
src/: __init__.py
tests/: test_bench_centric_validation.py  test_cli.py  test_common_definitions.py  test_parser.py  test_set_centric_validation.py
weight_parser/: program.py
weight_parser/tests/: driver.py  test.py
